Restructure multiprocessing code to use the robowiki.runner library, with some modifications